Add/delete lists. Shell for managing items

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,8 @@
                 android:label="@string/title_activity_shopping_list_add"
                 android:theme="@style/AppTheme.NoActionBar">
         </activity>
+        <activity android:name=".ShoppingListManageActivity">
+        </activity>
     </application>
 
 </manifest>
